--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~39.0.2",
+    "expo-av": "~8.6.0",
     "expo-constants": "~9.2.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
@@ -22,14 +23,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-modal-wrapper": "^3.1.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
-    "yup": "^0.29.3",
-    "expo-av": "~8.6.0"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
