--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~9.2.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.9.0",
     "formik": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
